UI improved, fonts imported

--- a/index.html
+++ b/index.html
@@ -4,33 +4,54 @@
     <meta charset="UTF-8" />
     <link href="style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font import -->
+    <link rel="stylesheet" href="https://use.typekit.net/bca5qop.css">
+    <script defer src="script.js"></script>
     <title>(Not) Wordle</title>
   </head>
   <body>
     <header>
       <h1>(Not) Wordle</h1>
+      <hr />
     </header>
-    <div id="input-container">
-      <div id="a1" class="letterInput"></div>
-      <div id="a2" class="letterInput"></div>
-      <div id="a3" class="letterInput"></div>
-      <div id="a4" class="letterInput"></div>
-      <div id="a5" class="letterInput"></div>
-      <div id="b1" class="letterInput"></div>
-      <div id="b2" class="letterInput"></div>
-      <div id="b3" class="letterInput"></div>
-      <div id="b4" class="letterInput"></div>
-      <div id="b5" class="letterInput"></div>
-      <div id="c1" class="letterInput"></div>
-      <div id="c2" class="letterInput"></div>
-      <div id="c3" class="letterInput"></div>
-      <div id="c4" class="letterInput"></div>
-      <div id="c5" class="letterInput"></div>
-      <div id="d1" class="letterInput"></div>
-      <div id="d2" class="letterInput"></div>
-      <div id="d3" class="letterInput"></div>
-      <div id="d4" class="letterInput"></div>
-      <div id="d5" class="letterInput"></div>
-    </div>
+    <main id="mainContainer">
+      <div id="inputContainer">
+        <div id="row1">
+          <div id="a1" class="letterInput"><input type="text"></div>
+          <div id="a2" class="letterInput"></div>
+          <div id="a3" class="letterInput"></div>
+          <div id="a4" class="letterInput"></div>
+          <div id="a5" class="letterInput"></div>
+        </div>
+        <div id="row2">
+          <div id="b1" class="letterInput"></div>
+          <div id="b2" class="letterInput"></div>
+          <div id="b3" class="letterInput"></div>
+          <div id="b4" class="letterInput"></div>
+          <div id="b5" class="letterInput"></div>
+        </div>
+        <div id="row3">
+          <div id="c1" class="letterInput"></div>
+          <div id="c2" class="letterInput"></div>
+          <div id="c3" class="letterInput"></div>
+          <div id="c4" class="letterInput"></div>
+          <div id="c5" class="letterInput"></div>
+        </div>
+        <div id="row4">
+          <div id="d1" class="letterInput"></div>
+          <div id="d2" class="letterInput"></div>
+          <div id="d3" class="letterInput"></div>
+          <div id="d4" class="letterInput"></div>
+          <div id="d5" class="letterInput"></div>
+        </div>
+        <div id="row5">
+          <div id="e1" class="letterInput"></div>
+          <div id="e2" class="letterInput"></div>
+          <div id="e3" class="letterInput"></div>
+          <div id="e4" class="letterInput"></div>
+          <div id="e5" class="letterInput"></div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
