--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
     <main id="mainContainer">
       <div id="inputContainer">
         <div id="row1">
-          <div class="letterInput" id="a1" ></div>
-          <div class="letterInput" id="a2" ></div>
-          <div class="letterInput" id="a3" ></div>
-          <div class="letterInput" id="a4" ></div>
+          <div class="letterInput" id="a1"></div>
+          <div class="letterInput" id="a2"></div>
+          <div class="letterInput" id="a3"></div>
+          <div class="letterInput" id="a4"></div>
           <div class="letterInput" id="a5"></div>
         </div>
         <div id="row2">
-          <div class="letterInput" id="b1" tabindex="0"></div>
-          <div class="letterInput" id="b2" tabindex="0"></div>
-          <div class="letterInput" id="b3" tabindex="0"></div>
-          <div class="letterInput" id="b4" tabindex="0"></div>
-          <div class="letterInput" id="b5" tabindex="0"></div>
+          <div class="letterInput" id="b1"></div>
+          <div class="letterInput" id="b2"></div>
+          <div class="letterInput" id="b3"></div>
+          <div class="letterInput" id="b4"></div>
+          <div class="letterInput" id="b5"></div>
         </div>
         <div id="row3">
-          <div class="letterInput" id="c1" tabindex="0"></div>
-          <div class="letterInput" id="c2" tabindex="0"></div>
-          <div class="letterInput" id="c3" tabindex="0"></div>
-          <div class="letterInput" id="c4" tabindex="0"></div>
-          <div class="letterInput" id="c5" tabindex="0"></div>
+          <div class="letterInput" id="c1"></div>
+          <div class="letterInput" id="c2"></div>
+          <div class="letterInput" id="c3"></div>
+          <div class="letterInput" id="c4"></div>
+          <div class="letterInput" id="c5"></div>
         </div>
         <div id="row4">
           <div class="letterInput" id="d1"></div>
@@ -60,8 +60,7 @@
           <div class="letterInput" id="f4"></div>
           <div class="letterInput" id="f5"></div>
         </div>
-        <button type="button" id="clearFields">Clear</button>
-        <button type="button" id="checkAnswer">Enter</button>
+    
       </div>
       <div class="keyboardContainer"></div>
     </main>
