--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       <h1>Not Wordle</h1>
       <hr />
     </header>
-
+    <div id="winModal" class="modal">
+      <div id="modalContent">Congrats! You correctly guessed the word</div>
+      <div id="modalButtons">
+        <button type="button" value="playAgain">Play Again!</button>
+      </div>
+    </div>
     <main id="mainContainer">
       <div id="inputContainer">
         <div id="row1">
@@ -61,7 +66,6 @@
           <div class="letterInput" id="f4"></div>
           <div class="letterInput" id="f5"></div>
         </div>
-    
       </div>
       <div class="keyboardContainer"></div>
     </main>
