Updated the answers file being used
Keyboard functionality added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="winModal" class="modal">
       <div id="modalContent">Congrats! You correctly guessed the word</div>
       <div id="modalButtons">
-        <button type="button" value="playAgain">Play Again!</button>
+        <button type="button" value="playAgain" id="playAgain">PLAY AGAIN</button>
       </div>
     </div>
     <main id="mainContainer">
