Keyboard colors added; needs debugging

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <hr />
     <div id="winModal" class="modal">
-      <div id="modalContent">Congrats! You correctly guessed the word</div>
+      <div id="modalContent"></div>
       <div id="modalButtons">
         <button type="button" value="playAgain" id="playAgain">PLAY AGAIN</button>
       </div>
@@ -71,39 +71,39 @@
       </div>
       <div class="keyboardContainer">
         <div class="keyRow1">
-          <button class="keyboardKey" type="button" value="Q">Q</button>
-          <button class="keyboardKey" type="button" value="W">W</button>
-          <button class="keyboardKey" type="button" value="E">E</button>
-          <button class="keyboardKey" type="button" value="R">R</button>
-          <button class="keyboardKey" type="button" value="T">T</button>
-          <button class="keyboardKey" type="button" value="Y">Y</button>
-          <button class="keyboardKey" type="button" value="U">U</button>
-          <button class="keyboardKey" type="button" value="I">I</button>
-          <button class="keyboardKey" type="button" value="O">O</button>
-          <button class="keyboardKey" type="button" value="P">P</button>
+          <button class="keyboardKey" type="button" value="q">Q</button>
+          <button class="keyboardKey" type="button" value="w">W</button>
+          <button class="keyboardKey" type="button" value="e">E</button>
+          <button class="keyboardKey" type="button" value="r">R</button>
+          <button class="keyboardKey" type="button" value="t">T</button>
+          <button class="keyboardKey" type="button" value="y">Y</button>
+          <button class="keyboardKey" type="button" value="u">U</button>
+          <button class="keyboardKey" type="button" value="i">I</button>
+          <button class="keyboardKey" type="button" value="o">O</button>
+          <button class="keyboardKey" type="button" value="p">P</button>
         </div>
         <div class="keyRow2">
-          <button class="keyboardKey" type="button" value="A">A</button>
-          <button class="keyboardKey" type="button" value="S">S</button>
-          <button class="keyboardKey" type="button" value="D">D</button>
-          <button class="keyboardKey" type="button" value="F">F</button>
-          <button class="keyboardKey" type="button" value="G">G</button>
-          <button class="keyboardKey" type="button" value="H">H</button>
-          <button class="keyboardKey" type="button" value="J">J</button>
-          <button class="keyboardKey" type="button" value="K">K</button>
-          <button class="keyboardKey" type="button" value="L">L</button>
+          <button class="keyboardKey" type="button" value="a">A</button>
+          <button class="keyboardKey" type="button" value="s">S</button>
+          <button class="keyboardKey" type="button" value="d">D</button>
+          <button class="keyboardKey" type="button" value="f">F</button>
+          <button class="keyboardKey" type="button" value="g">G</button>
+          <button class="keyboardKey" type="button" value="h">H</button>
+          <button class="keyboardKey" type="button" value="j">J</button>
+          <button class="keyboardKey" type="button" value="k">K</button>
+          <button class="keyboardKey" type="button" value="l">L</button>
         </div>
         <div class="keyRow3">
           <button class="keyboardKey" type="button" id="enter" value="enter">
             ENTER
           </button>
-          <button class="keyboardKey" type="button" value="Z">Z</button>
-          <button class="keyboardKey" type="button" value="X">X</button>
-          <button class="keyboardKey" type="button" value="C">C</button>
-          <button class="keyboardKey" type="button" value="V">V</button>
-          <button class="keyboardKey" type="button" value="B">B</button>
-          <button class="keyboardKey" type="button" value="N">N</button>
-          <button class="keyboardKey" type="button" value="M">M</button>
+          <button class="keyboardKey" type="button" value="z">Z</button>
+          <button class="keyboardKey" type="button" value="x">X</button>
+          <button class="keyboardKey" type="button" value="c">C</button>
+          <button class="keyboardKey" type="button" value="v">V</button>
+          <button class="keyboardKey" type="button" value="b">B</button>
+          <button class="keyboardKey" type="button" value="n">N</button>
+          <button class="keyboardKey" type="button" value="m">M</button>
           <button class="keyboardKey" type="button" id="back" value="back">
             <span class="material-symbols-outlined">
               backspace
