--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <!-- font import -->
     <link rel="stylesheet" href="https://use.typekit.net/bca5qop.css" />
     <!-- icon import -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <script defer src="script.js"></script>
-    <title>(Not) Wordle</title>
+    <title>Not Wordle</title>
   </head>
   <body>
     <header>
@@ -21,7 +24,10 @@
     <div id="winModal" class="modal">
       <div id="modalContent"></div>
       <div id="modalButtons">
-        <button type="button" value="playAgain" id="playAgain">PLAY AGAIN</button>
+        <button type="button" value="playAgain" id="playAgain">
+          PLAY AGAIN
+        </button>
+        <button type="button" value="exitModal" id="exitModal">CLOSE</button>
       </div>
     </div>
     <main id="mainContainer">
@@ -105,9 +111,7 @@
           <button class="keyboardKey" type="button" value="n">N</button>
           <button class="keyboardKey" type="button" value="m">M</button>
           <button class="keyboardKey" type="button" id="back" value="back">
-            <span class="material-symbols-outlined">
-              backspace
-              </span>
+            <span class="material-symbols-outlined"> backspace </span>
           </button>
         </div>
       </div>
